# Commit-Messages-as-Confessions-A-Sentiment-Archaeology-of-Software

./: .gitignore  CLI_USAGE.md  LICENSE  README.md  env.example  pyproject.toml  requirements.txt
cli/: CLI_USAGE.md  __init__.py  main.py
core/: __init__.py  git_extractor.py  preprocessor.py  sentiment_analyzer.py  utils.py  visualizer.py
github-action/: Dockerfile  action.yml  entrypoint.sh
moodmap/analyzer/: mood_aggregator.py
moodmap/collector/: trending_fetcher.py
moodmap/dashboard/: app.py
tests/: test_cli.py  test_core.py  test_visualizer.py
vscode-extension/: package.json
vscode-extension/src/: extension.ts
vscode-extension/src/panels/: index.ts
